feat : 산책 후기 목록 RecyclerView 표시

--- a/app/src/main/res/layout/row_walk_review_history.xml
+++ b/app/src/main/res/layout/row_walk_review_history.xml
@@ -24,8 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="멍멍이네"
-            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
-            android:textStyle="bold" />
+            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
 
     </LinearLayout>
 
