--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/mainFragment">
+    app:startDestination="@id/userStartFragment">
     <fragment
         android:id="@+id/managePetFragment"
         android:name="com.petpal.mungmate.ui.managepet.ManagePetFragment"
@@ -184,6 +184,19 @@
             android:name="isAdd"
             app:argType="boolean"
             android:defaultValue="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/userStartFragment"
+        android:name="com.petpal.mungmate.ui.user.UserStartFragment"
+        android:label="fragment_user_start"
+        tools:layout="@layout/fragment_user_start" >
+        <action
+            android:id="@+id/action_userStartFragment_to_addPetFragment"
+            app:destination="@id/addPetFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
 
 </navigation>
