feat : 커뮤니티 게시글 삭제 구현#76

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -119,6 +119,8 @@
         android:id="@+id/communityPostDetailFragment"
         android:name="com.petpal.mungmate.ui.community.CommunityPostDetailFragment"
         android:label="CommunityPostDetailFragment">
+
+
         <action
             android:id="@+id/action_communityPostDetailFragment_to_communityDetailModifyFragment"
             app:destination="@id/communityDetailModifyFragment"
@@ -126,6 +128,9 @@
             app:exitAnim="@anim/to_left"
             app:popEnterAnim="@anim/from_left"
             app:popExitAnim="@anim/to_right" />
+        <argument
+            android:name="position"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/communitySearchFragment"
