--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -67,5 +67,6 @@
     <color name="bottom_navigation_state_checked_false">#33000000</color>
     <color name="kakao_login_btn_backgroundTint">#FEE500</color>
     <color name="delete">#F61023</color>
+    <color name="dialog_cancel_color">#EAEAEA</color>
 
 </resources>
