--- a/app/src/main/res/layout/fragment_walk.xml
+++ b/app/src/main/res/layout/fragment_walk.xml
@@ -30,14 +30,14 @@
                 android:layout_marginTop="8dp"
                 android:orientation="horizontal">
 
-<!--                <ToggleButton-->
-<!--                    android:id="@+id/toggleWalk"-->
-<!--                    android:layout_width="90dp"-->
-<!--                    android:layout_height="30dp"-->
-<!--                    android:layout_marginStart="16dp"-->
-<!--                    android:background="@drawable/toggle_button_animated_background"-->
-<!--                    android:textOff="산책중"-->
-<!--                    android:textOn="산책중 아님" />-->
+                <!--                <ToggleButton-->
+                <!--                    android:id="@+id/toggleWalk"-->
+                <!--                    android:layout_width="90dp"-->
+                <!--                    android:layout_height="30dp"-->
+                <!--                    android:layout_marginStart="16dp"-->
+                <!--                    android:background="@drawable/toggle_button_animated_background"-->
+                <!--                    android:textOff="산책중"-->
+                <!--                    android:textOn="산책중 아님" />-->
 
 
                 <!-- weight 속성을 사용해 빈 공간을 채워넣는 View 추가 -->
@@ -59,9 +59,27 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="8dp"
-                    android:text="필터"
-                    android:checked="false"/>
+                    android:checked="false"
+                    android:text="필터" />
 
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
+
+                <ImageView
+                    android:id="@+id/imageViewMylocation"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_marginRight="8dp"
+                    app:srcCompat="@drawable/my_location_24px" />
             </LinearLayout>
 
         </LinearLayout>
