Feat : 커뮤니티 게시글 수정 기능 완료 #76

--- a/app/src/main/res/menu/community_post_modify.xml
+++ b/app/src/main/res/menu/community_post_modify.xml
@@ -4,6 +4,7 @@
 
     <item
         android:id="@+id/item_modify"
+        app:showAsAction="always"
         android:title="@string/modify_complete" />
 
 
