좋아요 on/off 아이콘 변경(아이콘 수정 필요), DB 받아옴-> 바텀시트 코루틴 로직 변경, 리뷰 없을 시 상세 리뷰 페이지에도 데이터 없음 고지

--- a/app/src/main/res/layout/fragment_place_review.xml
+++ b/app/src/main/res/layout/fragment_place_review.xml
@@ -88,6 +88,13 @@
             android:drawableStart="@drawable/call_24px"
             android:text="000-000-0000" />
 
+        <TextView
+            android:id="@+id/noReviewsTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="작성된 리뷰가 없습니다"
+            android:visibility="gone" />
+
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
