--- a/app/src/main/res/layout/row_walk_bottom_sheet_place.xml
+++ b/app/src/main/res/layout/row_walk_bottom_sheet_place.xml
@@ -55,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
-                app:srcCompat="@drawable/favoirte_24px" />
+                app:srcCompat="@drawable/empty_heart" />
         </LinearLayout>
 
         <LinearLayout
