--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -163,13 +163,20 @@
     <include app:graph="@navigation/order_history" />
     <fragment
         android:id="@+id/userInfoFragment"
-        android:name="com.petpal.mungmate.user.UserInfoFragment"
+        android:name="com.petpal.mungmate.ui.user.UserInfoFragment"
         android:label="fragment_user_info"
         tools:layout="@layout/fragment_user_info" >
         <argument
             android:name="isRegister"
             app:argType="boolean"
             android:defaultValue="false" />
+        <action
+            android:id="@+id/action_userInfoFragment_to_addPetFragment"
+            app:destination="@id/addPetFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/productRegistrationFragment"
@@ -184,19 +191,19 @@
             android:name="isAdd"
             app:argType="boolean"
             android:defaultValue="true" />
+        <action
+            android:id="@+id/action_addPetFragment_to_mainFragment"
+            app:destination="@id/mainFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/userStartFragment"
         android:name="com.petpal.mungmate.ui.user.UserStartFragment"
         android:label="fragment_user_start"
         tools:layout="@layout/fragment_user_start" >
-        <action
-            android:id="@+id/action_userStartFragment_to_addPetFragment"
-            app:destination="@id/addPetFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim"
-            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
         <action
             android:id="@+id/action_userStartFragment_to_userInfoFragment"
             app:destination="@id/userInfoFragment"
