--- a/app/src/main/res/layout/row_community.xml
+++ b/app/src/main/res/layout/row_community.xml
@@ -99,7 +99,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
-            android:scaleType="fitXY"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
             app:srcCompat="@mipmap/ic_launcher" />
     </com.google.android.material.card.MaterialCardView>
 
