feat : 이미지 클릭 시 다이얼로그에서 fragment로 변경 #99

--- a/app/src/main/res/layout/fragment_full_screen.xml
+++ b/app/src/main/res/layout/fragment_full_screen.xml
@@ -7,8 +7,9 @@
     <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/fullScreenImageView"
         android:layout_width="match_parent"
+        android:adjustViewBounds="true"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"
+        android:scaleType="centerInside"
         android:layout_gravity="center" />
 
 </RelativeLayout>
