--- a/app/src/main/res/drawable/send_24px.xml
+++ b/app/src/main/res/drawable/send_24px.xml
@@ -7,5 +7,5 @@
     android:autoMirrored="true">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M120,800L120,160L880,480L120,800ZM200,680L674,480L200,280L200,420L440,480L200,540L200,680ZM200,680L200,480L200,280L200,420L200,420L200,540L200,540L200,680Z"/>
+      android:pathData="M120,800L120,560L440,480L120,400L120,160L880,480L120,800Z"/>
 </vector>
